--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         
         <div id="winMessage">
-            <h2>¡Felicidades! Acabas de ganar!!!</h2>
+            <h2>Felicidades! Acabas de ganar!!!</h2>
             <a href="declaracion.html" target="_blank">Reclamar recompensa :))</a>
         </div>
     </div>
